Lanai: crashes at [libobjc.A.dylib+0x601d] objc_msgSend+0x1d

XMLWordPrintable

    • 2d
    • x86
    • os_x

      (from https://youtrack.jetbrains.com/issue/JBR-2064)

      The following tests crash on Lanai builds

      java/awt/image/DrawImage/UnmanagedDrawImagePerformance.java
      java/awt/Window/WindowsLeak/WindowsLeak.java
      with the following output:

      #section:main
      ----------messages:(5/342)----------
      command: main -Xms32M -Xmx32M WindowsLeak
      reason: User specified action: run main/othervm -Xms32M -Xmx32M WindowsLeak
      Mode: othervm [/othervm specified]
      Additional options from @modules: --add-modules java.desktop --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED
      elapsed time (seconds): 3.661
      ----------configuration:(5/154)----------
      Boot Layer
        add modules: java.desktop
        add exports: java.desktop/sun.awt ALL-UNNAMED
                     java.desktop/sun.java2d ALL-UNNAMED

      ----------System.out:(21/989)----------
      Filling the heap...........#
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb)[thread 58119 also had an error] at pc=0x00007fff68ac001d
      , pid=11427, tid=775
      #
      # JRE version: OpenJDK Runtime Environment (14.0+9) (build 14+9-blanai.14)
      # Java VM: OpenJDK 64-Bit Server VM (14+9-blanai.14, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
      # Problematic frame:
      # C [libobjc.A.dylib+0x601d] objc_msgSend+0x1d
      #
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /Users/vprovodin/workspace/github/JetBrainsRuntime_Lanai/JTwork/scratch/hs_err_pid11427.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      # The crash happened outside the Java Virtual Machine in native code.
      # See problematic frame for where to report the bug.
      #
      ----------System.err:(1/15)----------
      metalEnabled=1

      Steps to reproduce:
      $ jtreg -javaoptions:-Dsun.java2d.metal=true -testjdk:[path_to_lanai_build] test/jdk/java/awt/image/DrawImage/UnmanagedDrawImagePerformance.java

            Assignee:
            Alexey Ushakov
            Reporter:
            Alexey Ushakov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: