8238165: Lanai: crashes at [libobjc.A.dylib+0x601d] objc_msgSend+0x1d

Fixed incorrect deallocation of native resources connected with MTLSurfaceData. Applied OGL fix logic (8146238)